src/app/request/request.component.css
.taskContainer {
    /* height: 82vh; */
    height : auto;
    background-color: #FFFFFF;
    margin-left: 110px;
    z-index: 1;
    border-color: #A1F7FF;
    border: 3px solid #E5FDFF; 
    position: absolute;
    right : 0px;
    left: 10px;
    top : 50px;
    bottom : 18px;
    overflow-y: scroll;
    box-shadow: 0 0 3px 20px rgba(255, 255, 255, 0.3) inset; 
}
.taskContainer::-webkit-scrollbar { width: 0 !important }

.topButtons {
    position: sticky;
    top: 0;
    background-color: #FFFFFF;
}

.request { 
    background-color : color(srgb 0.92 0.92 0.92); 
    border-radius: 10px;
}

.dropdown-toggle::after {
    display: none;
}
.dropdown-menu {
    min-width: auto;
}

.totalTaskReferenceColor {
    height : 15px;
    width : 15px;
    background-color: #2E68FC;
    border-radius : 50%;
}
.totalTaskReferenceTitle p {
    font-size: 15px;
}
.completedTaskRefernceTitle{
    font-size: 15px;
}
.completedTaskColor {
    height : 15px;
    width : 15px;
    background-color: #0BD437;
    border-radius : 50%;
}
.taskInProgressReferenceTitle p {
    font-size: 15px;
}
.taskInProgressColor {
    height : 15px;
    width : 15px;
    background-color: #E9ED1E;
    border-radius : 50%;
}
.taskToDoReferenceTitle p {
    font-size: 15px;
}
.taskToDoColor {
    height : 15px;
    width : 15px;
    background-color: #F27731;
    border-radius : 50%;
}

.taskItems {
    position: absolute;
    left: 0px;
    right : 0px;
    height: 200px;
    z-index: -1;
}
.taskItem{
    height: 40px;
    
    border-width: 0.2px; 
    border-color: #000000;
    border-top-style: solid;
    border-right-style: solid;
    border-left-style: solid;
}
.text-start{
    
}
.taskItem:first-child {
    border-width: 0.2px; 
    border-radius: 10px 10px 0px 0px;
    border-color: #000000;
    border-top-style: solid;
    border-bottom-style: none;
  border-right-style: solid;
  border-left-style: solid;
}
.taskItem:last-child {
    border-width: 0.2px; 
    border-radius: 0px 0px 10px 10px;
    border-color: #000000;
    border-bottom-style: solid;
  border-right-style: solid;
  border-left-style: solid;
}
.taskItem:only-child {
    border-width: 0.2px; 
    border-radius: 10px;
    border-color: #000000;
    border-style: solid;
}

.taskCard {
    width: 300px;
    /* background-color: red; */
    border: 3px solid #000000; 
    border-radius: 10px;
    position: relative;
    z-index: -1;

    /* margin-left: 20px; */
}
.options {
    position: absolute;
    right: 0px;
}

